# ComfyUi-MzMaXaM

./: .gitignore  ImageSelector.html  ImageSelector.js  ImageSelector.py  LMStudioApi.py  MzMaXaM.py  OllamaApi.py  README.md  SamplerWithVae.py  SelectLatentSize.py  SelectLatentSizePlus.py  TextEncode3in1.py  UpscaleByN.py  __init__.py  newLatentAdvanced.py  pyproject.toml
example_workflows/: Pony Hi-Rez-Fix t2i.json  Simple Flux.json  Simple_Animagine_XL.json  Simple_Illustrious.json  Simple_Pony.json  Simple_SDXL_.json  Simple_Shuttle.json  i2i + Hi-Rez.json
js/: SelectLatentSizePlus.js  newLatentAdvanced.js  resolutions.json
play/: Play1.html  Play1.js  Play1.py
