[project]
name = "comfyui-mzmaxam"
description = "A pack of nodes(only 2 for now) to make my life easier and hopefully yours ;)"
version = "0.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MzMaXaM/ComfyUi-MzMaXaM"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mzmaxam"
DisplayName = "ComfyUi-MzMaXaM"
Icon = ""
