[project]
name = "comfyui-mzmaxam"
description = "A pack of nodes to make my life as an AI artist easier and hopefully yours ;)"
version = "0.1.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MzMaXaM/ComfyUi-MzMaXaM"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mzmaxam"
DisplayName = "ComfyUi-MzMaXaM"
Icon = ""
